--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.react-datepicker__day--in-selecting-range,
-.react-datepicker__day--in-range {
-  background-color: #1d4ed8 !important;
+.react-datepicker-wrapper {
+  height: 40px !important;
+  margin-top: 8px !important;
+  margin-bottom: 4px !important;
+}
+.react-datepicker__input-container {
+  height: 40px !important;
+}
+.react-datepicker__input-container input {
+  color: #9e9e9e !important;
 }
